# phate-analysis-plugin

./: README.html  README.md  phate_analysis.py  plugin.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-spa.yml
examples/diann/: annotation.txt  imputed.data.txt
